--- a/style.css
+++ b/style.css
@@ -3,3 +3,45 @@ h1 {
   text-align: center;
   font-size: 75px;
 }
+
+<style>
+  
+  body {
+  background-color: white;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  font-size: 75px;
+}
+  
+  
+  
+</style><style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #eb6817;
+  display: flex;
+justify-content: center;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
